--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,33 @@
 {% extends "layout.html" %}
 {% block title %}Login{% endblock %}
 {% block body %}
+
 <div class="row p-0 m-0 text-center height">
     <div class="col-md-5 p-0 m-0 themed-grid-col" id="left">
-        Left-side
+        <img id="left-login-logo" src="/static/left-side-login.png" alt="image of a dog">
     </div>
 
-<div class="col-md p-0 m-0 themed-grid-col" id="right">
-    <div class="container">
+    <div class="col-md p-0 m-0 themed-grid-col" id="right">
+        <div class="container">
             <div class="header">
-            <h2>Business Name</h2>
+                <img id="login-logo" src="/static/k9-logo.png" alt="logo">
+                <h1>Fetch.</h1>
             </div>
 
             <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            </div>
-
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Log In</button>
-            </form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1" class="label">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
+
+                <div class="form-group">
+                    <label for="exampleInputPassword1" class="label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+
+                <button type="submit" class="btn btn-primary">Log In</button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
