--- a/templates/login.html
+++ b/templates/login.html
@@ -9,23 +9,24 @@
 
     <div class="col-md p-0 m-0 themed-grid-col" id="right">
         <div class="container">
+            <a id="top-right" href="/templates/register.html">Not a member? Sign up here!</a>
             <div class="header">
                 <img id="login-logo" src="/static/k9-logo.png" alt="logo">
                 <h1>Fetch.</h1>
             </div>
 
-            <form>
+            <form action="/login" method="post">
                 <div class="form-group">
-                    <label for="exampleInputEmail1" class="label">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <label class="label">Email</label>
+                    <input type="email" autofocus class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputPassword1" class="label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label class="label">Password</label>
+                    <input type="password" class="form-control" name="password" placeholder="Password">
                 </div>
 
-                <button type="submit" class="btn btn-primary">Log In</button>
+                <button type="submit" name="submit" class="btn btn-primary">Log In</button>
             </form>
         </div>
     </div>
