--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,14 @@ body {
     height: 100vh;
 }
 
+.flash {
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    color: red;
+    width: 60%;
+}
+
 
 .btn {
     margin-top: 20px;
@@ -46,6 +54,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 5px;
 }
 
 h1 {
