--- a/static/style.css
+++ b/static/style.css
@@ -113,7 +113,65 @@ h1 {
 
 
 /* ---- Logged in Sidebar ---- */
+.sidebar {
+    background-color: #F0F2F5;
+}
 
+.navbar>.container-fluid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+}
 
+.navbar-brand {
+    font-size: 35px;
+    font-weight: 500;
+    padding: 0px;
+    color: #333333;
+}
+
+.navbar-brand:hover {
+    color: #6c757d;
+}
+
+.flex-fill {
+    color: #333333;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin-bottom: 8px;
+    width: 80%;
+    align-self: center;
+    margin-bottom: 20px;
+}
+
+.nav-link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.link-logo {
+    opacity: 0.3;
+}
+
+#logout {
+    color: #333333;
+    font-size: 15px;
+    position: fixed;
+    margin-bottom: 15px;
+    bottom: 0;
+}
 
 /* ---- Dashboard ---- */
+
+.nav {
+    width: 100%;
+}
+
+.flex-fill {
+    margin-bottom: 20px;
+}
