--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,42 @@
 {% extends "layout.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block body %}
+<div class="d-flex">
+  <div class="sidebar p-3 text-break" style="height: 100vh; width: 15%; min-width: 200px;">
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+          <img id="sidebar-logo" src="/static/k9-logo.png" alt="Logo" width="auto" height="45">
+          Fetch.
+        </a>
+        
+        <hr>
 
+        
+        <nav class="nav nav-pills flex-column flex-sm-column flex-lg-column">
+          <a class="flex-fill text-sm-start nav-link active" aria-current="page" href="#">
+            <img class="link-logo" src="/static/house.svg" alt="Home" style="height: 18px; width: 18px;">
+            Dashboard
+          </a>
+          <a class="flex-fill text-sm-start nav-link" href="#">
+            <img class="link-logo" src="/static/clipboard-check.svg" alt="Home" style="height: 18px; width: 18px;">
+            Individual Client
+          </a>
+          <a class="flex-fill text-sm-start nav-link" href="#">
+            <img class="link-logo" src="/static/plus-square.svg" alt="Home" style="height: 18px; width: 18px;">
+            Add a Client
+          </a>
+          <hr>
+        </nav>
+          <a id="logout" href="/logout">Logout?</a>
+      </div> 
+  </div>
+
+
+
+
+
+  <div class="flex-grow-1">dashboard</div>
+</div>
 
 {% endblock %}
