--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block body %}
+
 <div class="d-flex">
+
+  <!--SIDEBAR:-->
   <div class="sidebar p-3 text-break" style="height: 100vh; width: 15%; min-width: 200px;">
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
@@ -12,7 +15,6 @@
         
         <hr>
 
-        
         <nav class="nav nav-pills flex-column flex-sm-column flex-lg-column">
           <a class="flex-fill text-sm-start nav-link active" aria-current="page" href="#">
             <img class="link-logo" src="/static/house.svg" alt="Home" style="height: 18px; width: 18px;">
@@ -32,11 +34,61 @@
       </div> 
   </div>
 
+  <!--CENTRE PAGE-->
+  <div class="flex-grow-1">
+    <div class="centre">
+    <div class="dash-top">
+      <h2>{{greeting}}{{name}}</h2>
+      <h5>Check here for overview</h5>
+    </div>
 
+<div class="container-fluid dashboard-centre">
+  <div class="row gx-0">
+    <div class="col-md-6">
+      <div class="border p-2">
+        <h6>My Walks:</h6>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>John</td>
+      <td>Doe</td>
+      <td>@social</td>
+    </tr>
+  </tbody>
+</table>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="border p-2">TEST HERE</div>
+    </div>
+  </div>
 
-
-
-  <div class="flex-grow-1">dashboard</div>
+  <div class="row gx-2 mt-4">
+    <div class="col-md-6">
+      <div class="border p-3">TEST HERE</div>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
