--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,9 @@
     <!-- Add in stylesheet -->
     <link href="/static/style.css" rel="stylesheet">
 
+    <!-- Add in Favicon -->
+     <link rel="icon" href="/static/favicon-16x16.png" type="image/x-icon">
+
     <title>Fetch: {% block title %}{% endblock %}</title>
 </head>
 <body>
