--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 <div class="d-flex">
 
   <!--SIDEBAR:-->
-  <div class="sidebar p-3 text-break" style="height: 100vh; width: 15%; min-width: 200px;">
-    <nav class="navbar bg-body-tertiary">
+  <div class="sidebar p-3 text-break" style="height: 100vh; width: 15%; min-width: 200px; background-color: #F0F2F5;">
+    <nav class="navbar">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center gap-2" href="#">
           <img id="sidebar-logo" src="/static/k9-logo.png" alt="Logo" width="auto" height="45">
@@ -15,8 +15,8 @@
         
         <hr>
 
-        <nav class="nav nav-pills flex-column flex-sm-column flex-lg-column">
-          <a class="flex-fill text-sm-start nav-link active" aria-current="page" href="#">
+        <nav class="nav nav-pills flex-column flex-sm-column flex-lg-column" style="width: 100%;">
+          <a class="flex-fill text-sm-start nav-link active" aria-current="page" href="/">
             <img class="link-logo" src="/static/house.svg" alt="Home" style="height: 18px; width: 18px;">
             Dashboard
           </a>
@@ -24,7 +24,7 @@
             <img class="link-logo" src="/static/clipboard-check.svg" alt="Home" style="height: 18px; width: 18px;">
             Individual Client
           </a>
-          <a class="flex-fill text-sm-start nav-link" href="#">
+          <a class="flex-fill text-sm-start nav-link" href="/add">
             <img class="link-logo" src="/static/plus-square.svg" alt="Home" style="height: 18px; width: 18px;">
             Add a Client
           </a>
@@ -33,6 +33,7 @@
           <a id="logout" href="/logout">Logout?</a>
       </div> 
   </div>
+
 
   <!--CENTRE PAGE-->
   <div class="container-fluid"">
