Removed upload links, changed link to walks

--- a/templates/add.html
+++ b/templates/add.html
@@ -20,9 +20,9 @@
             <img class="link-logo" src="/static/house.svg" alt="Home" style="height: 18px; width: 18px;">
             Dashboard
           </a>
-          <a class="flex-fill text-sm-start nav-link" href="#">
+          <a class="flex-fill text-sm-start nav-link" href="/walks">
             <img class="link-logo" src="/static/clipboard-check.svg" alt="Home" style="height: 18px; width: 18px;">
-            Individual Client
+            Walks
           </a>
           <a class="flex-fill text-sm-start nav-link active" href="/add">
             <img class="link-logo" src="/static/plus-square.svg" alt="Home" style="height: 18px; width: 18px;">
@@ -86,16 +86,6 @@
                 <option>Male</option>
                 <option>Female</option>
             </select>
-        </div>
-
-        <div class="form-group">
-            <label for="formFileSm" class="label">Upload Image</label>
-            <input class="form-control form-control-sm" type="file" name="image" style="height: 36px;">
-        </div>
-
-        <div class="form-group">
-            <label for="label" class="label">Upload Contract</label>
-            <input class="form-control form-control-sm" type="file" name="contract" style="height: 36px;">
         </div>
 
         <div class="form-group">
