--- a/templates/index.html
+++ b/templates/index.html
@@ -37,53 +37,122 @@
 
   <!--CENTRE PAGE-->
   <div class="container-fluid">
-    <div class="row align p-3 flex-column b-2">
+    <div class="row p-3 flex-column b-2">
       <h3>{{greeting}}{{name}}</h3>
       <span class="border-bottom"><h5>Please check out your dashboard below.</h5></span>
     </div>
-    <div class="row" style="margin-top: 15px;">
+        <div class="row" style="margin-top: 15px;">
 
-      <div class="col" style="border: 2px solid rgb(249, 249, 249);">
-        <h5>Client Tracker</h5>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Client</th>
-            <th scope="col">Pets Name</th>
-            <th scope="col">Breed</th>
-            <th scope="col">Age</th>
-            <th scope="col">Gender</th>
-            <th scope="col">Notes</th>
-          </tr>
-        </thead>
-        <tbody>
-            {% for row in client %}
-          <tr>
-            <td>{{ row[2] }}</td>
-            <td>{{ row[3] }}</td>
-            <td>{{ row[4] }}</td>
-            <td>{{ row[5] }}</td>
-            <td>{{ row[6] }}</td>
-            <td>{{ row[9] }}</td>
-          </tr>
-            {% endfor %}
-        </tbody>
-      </table>
-      </div>
-  
-      <div class="col" style="border: 2px solid rgb(249, 249, 249);">
-        <h5>Walks</h5>
-      </div>
-    </div>
-    
-    <div class="row" style="height: 30vh; margin-top: 15px;">
-      <div class="col" style="border: 2px solid rgb(249, 249, 249);">
-        <h5>Payments</h5>
-      </div>
-      <div class="col" style="border: 2px solid rgb(249, 249, 249);">
-        <h5>Overview</h5>
-      </div>
-    </div>
+          <div class="col" style="border: 2px solid rgb(249, 249, 249); margin-right: 30px;">
+            <h5>Client Tracker</h5>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Client</th>
+                  <th scope="col">Pets Name</th>
+                  <th scope="col">Breed</th>
+                  <th scope="col">Age</th>
+                  <th scope="col">Gender</th>
+                  <th scope="col">Notes</th>
+                </tr>
+              </thead>
+              <tbody>
+                  {% for row in client %}
+                <tr>
+                  <td>{{ row[2] }}</td>
+                  <td>{{ row[3] }}</td>
+                  <td>{{ row[4] }}</td>
+                  <td>{{ row[5] }}</td>
+                  <td>{{ row[6] }}</td>
+                  <td>{{ row[9] }}</td>
+                </tr>
+                  {% endfor %}
+              </tbody>
+            </table>
+          </div>
+
+          <div class="col" style="border: 2px solid rgb(249, 249, 249);">
+            <h5>Walk Tracker</h5>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Client</th>
+                  <th scope="col">Pets Name</th>
+                  <th scope="col">Walk Type</th>
+                  <th scope="col">Time</th>
+                </tr>
+              </thead>
+              <tbody>
+                  {% for row in walks %}
+                <tr>
+                  <td>{{ row[0] }}</td>
+                  <td>{{ row[1] }}</td>
+                  <td>{{ row[2] }}</td>
+                  <td>{{ row[3] }}</td>
+                </tr>
+                  {% endfor %}
+              </tbody>
+            </table>
+          </div>
+          </div>
+        <div class="row" style="margin-top: 15px;">
+          <div class="col" style="border: 2px solid rgb(249, 249, 249); margin-right: 30px;">
+            <h5>Payments</h5>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Client</th>
+                  <th scope="col">Payments Owed (£)</th>
+                  <th scope="col">Paid?</th>
+                  <th scope="col">Notes?</th>
+                </tr>
+              </thead>
+              <tbody>
+                  {% for row in payment %}
+                <tr>
+                  <td>{{ row[0] }}</td>
+                  <td>£{{ row[2] }}</td>
+                  <td>{{ row[3] }}</td>
+                  <td>{{ row[4] }}</td>
+                </tr>
+                  {% endfor %}
+              </tbody>
+            </table>
+          </div>
+
+          <div class="col" style="border: 2px solid rgb(249, 249, 249);">
+            <h5>Overview</h5>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Category</th>
+                  <th scope="col">Client Count</th>
+                  <th scope="col">Total (£)</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Paid</td>
+                  <td>{{ paid[0] }}</td>
+                  <td>£{{ paid[1] }}</td>
+                </tr>
+                <tr>
+                  <th scope="row">Unpaid</td>
+                  <td>{{ unpaid[0] }}</td>
+                  <td>£{{ unpaid[1] }}</td>
+                </tr>
+                <tr>
+                  <th scope="row">Total</td>
+                  <td>
+                    {{ total_clients[0] }}
+                  </td>
+                  <td>£{{ total_paid[0] }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          </div>
+        </div>
   </div>
 
 
